<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="20dp"
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_brown_light"
    android:weightSum="1">


    <TextView
        android:id="@+id/_total_time"
        android:text="@string/label_total_time"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/total_time"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/_backtracking_used"
        android:text="@string/label_use_of_backtracking"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/backtracking_used"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/_backtrack_iterations"
        android:text="@string/label_back_track_iter"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/backtrack_iterations"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/_maxStackLoad"
        android:text="@string/label_stack_load"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/maxStackLoad"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />



    <TextView
        android:id="@+id/_total_time_line_solv"
        android:text="@string/label_line_solving_time"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/total_time_line_solv"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />


    <TextView
        android:id="@+id/_lines_processed"
        android:text="@string/label_lines_processed"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold|italic"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/lines_processed"
        android:textAppearance="?android:textAppearanceMedium"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <Button
            android:id="@+id/return_button"
            android:text="@string/return_button"
            android:textColor="@color/color_brown_dark"
            android:background="#fff"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </FrameLayout>

</LinearLayout>