<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="fm.apps.kirtsim.nonogramcheat.user_input.PuzzleSizeFragment">
    <TextView
        android:id="@+id/puzzle_size_title"
        android:text="@string/puzzle_size_title"
        android:textColor="@color/color_brown_dark"
        android:textAppearance="?android:textAppearanceLarge"
        android:textStyle="bold|italic"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/rowsSizeLabelTV"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/num_of_rows"
            android:layout_marginTop="30dp"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/rowsSizeTV"
            android:text="@string/number_dummy"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/rowsSizeLabelTV"
            android:layout_marginStart="20dp"/>
        <SeekBar
            android:id="@+id/rowsSetterSB"
            android:max="28"
            android:progress="13"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/rowsSizeLabelTV"
            android:layout_marginTop="10dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">
        <TextView
            android:id="@+id/columnsSizeLabelTV"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:text="@string/num_of_cols"
            android:layout_marginTop="30dp"
            android:layout_width="95dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"/>
        <TextView
            android:id="@+id/colsSizeTV"
            android:text="@string/number_dummy"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceLarge"
            android:layout_marginTop="30dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/columnsSizeLabelTV"
            android:layout_marginStart="20dp"/>
        <SeekBar
            android:id="@+id/colsSetterSB"
            android:max="28"
            android:progress="13"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/columnsSizeLabelTV"
            android:layout_marginTop="10dp"/>

    </RelativeLayout>

</LinearLayout>
